# clr-librenms-mcp

./: Dockerfile  README.md  credentials.json.example  pyproject.toml
.github/workflows/: docker.yml
src/clr_librenms_mcp/: __main__.py  annotations.py  config.py  librenms_client.py  server.py
src/librenms_mcp_server/: __init__.py  __main__.py  config.py  librenms_client.py  server.py
tests/: test_annotations.py
