[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clr-librenms-mcp"
version = "1.0.0"
description = "MCP server for LibreNMS network monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Clearminds AB"}]
keywords = ["mcp", "librenms", "monitoring", "snmp", "network", "model-context-protocol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.14.0,<3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage = "https://github.com/clearminds/clr-librenms-mcp"
Repository = "https://github.com/clearminds/clr-librenms-mcp"
Issues = "https://github.com/clearminds/clr-librenms-mcp/issues"

[project.scripts]
clr-librenms-mcp = "clr_librenms_mcp.server:main"
